# Project-9-oc

./: pyproject.toml
V1/: Salanoubat_Louis_3_presentations_012023.pptx
V1/dataset/: final-file.csv
V1/pyscript/: Salanoubat_Louis_1_preparation_nettoyage_analyse_exploratoire_122022.ipynb  Salanoubat_Louis_2_clustering_visualisations_122022.ipynb
V2/: Salanoubat_Louis_3_presentations_012023.docx  sources and links.txt
V2/dataset/: countries_codes_and_coordinates.csv  eco_datas.csv  fao_code_def.csv  final_df.csv  languages.csv  political_stability.csv
V2/pyscript/: Salanoubat_Louis_1_preparation_nettoyage_analyse_exploratoire_012023.ipynb  Salanoubat_Louis_2_clustering_visualisations_122022.ipynb
