[tool.poetry]
name = "project9"
version = "0.1.0"
description = ""
authors = ["LEKALIF <l.salanoubat@outlook.fr>"]

[tool.poetry.dependencies]
python = "3.10"
pandas = "^1.5.2"
streamlit = "^1.15.1"
numpy = "^1.23.5"
dask = "^2022.11.1"
ipykernel = "^6.18.3"
seaborn = "^0.12.1"
scikit-learn = "^1.1.3"
plotly = "^5.11.0"
nbformat = "^5.7.0"
yellowbrick = "^1.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
